Добавил ещё адреса и разбил их на рзделы

--- a/Список полезных сайтов.md
+++ b/Список полезных сайтов.md
@@ -1,8 +1,48 @@
 # Список полезных сайтов
 
-- [Блог о программировании DevGung](https://dev-gang.ru/)
-  - [Сниппеты в VS Code](https://dev-gang.ru/article/fragmenty-koda-vs-of3zdc2f54/)
-- [ShellHucks - блог о администрировании Linux](https://www.shellhacks.com/ru/)
-  - [Git — Настройка Username & Password — Хранение Учетных Данных](https://www.shellhacks.com/ru/git-config-username-password-store-credentials/)
+## Онлайн справочники, форумы и учебники...
+
+### ... по вебу
+
 - [CSS-LIVE - жизнь во фронтенде](https://css-live.ru/)
   - [Элемент \<header\>](https://css-live.ru/articles/element-header.html)
+
+#### JavaScript
+- [Современный учебник JavaScript](https://learn.javascript.ru/)
+  - На данный момент остановился [здесь](https://learn.javascript.ru/alert-prompt-confirm)
+- [jQuery - page2page](http://jquery.page2page.ru/index.php5/%D0%97%D0%B0%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0) - справочник по jQuery
+- [jQuery для начинающих - Антон Шевчук](https://antonshevchuk.gitbooks.io/jquery-for-beginners/content/) - книга на gitbooks
+  - На данный момент остановился [здесь](https://antonshevchuk.gitbooks.io/jquery-for-beginners/content/0_html_css_javascript/javascript-introduction.html)
+
+
+### ... по программированию (в т.ч по вебу)
+
+- [Блог о программировании DevGung](https://dev-gang.ru/)
+  - [Сниппеты в VS Code](https://dev-gang.ru/article/fragmenty-koda-vs-of3zdc2f54/)
+
+- [TechRocks | Программирование и IT новости](https://techrocks.ru/)
+  - [Termux: дружественный терминал для Android](https://techrocks.ru/2019/07/01/termux-android-friendly-terminal/)
+
+### ... по Git и GitHub
+
+- [Раздел ALTASSIAN](https://www.atlassian.com/ru/git/tutorials)
+  - [команда git diff](https://www.atlassian.com/ru/git/tutorials/saving-changes/git-diff)
+
+### ... по Линуксу и серверам
+
+- [ShellHucks - блог о администрировании Linux](https://www.shellhacks.com/ru/)
+  - [Git — Настройка Username & Password — Хранение Учетных Данных](https://www.shellhacks.com/ru/git-config-username-password-store-credentials/)
+
+## Материалы с Хабра
+- Termux шаг за шагом [часть 1](https://habr.com/ru/post/444950/) и [часть 2](https://habr.com/ru/post/445868/)
+- [Эффективное использование Github](https://habr.com/ru/company/2gis/blog/306166/)
+
+## Оформление проектов
+- [Сайт FreePic](https://ru.freepik.com/home) - есть растровые и вектроные изображения для фона, иконок. Имеются макеты в формате .PSD. Также контент можно скачать и в .AI и .EPS формате
+- [Сайт Flaticon](https://flaticon.com/) - иконки для сайтов
+- [Сайт Slidesgo - слайды](https://slidesgo.com/) - этот ресурс можно использовать, если понадобится сайт с инфографикой. Сами слайды прекрасно обрабатываются в Google Презеентациях.
+- [Сайт Storyset](https://storyset.com/) - здесь хранятся связанные друг с другом иллюстрации для сайтов. Можно подобрать основной цвет иллюстраций, подходящий сюжет и скачать как в .PNG, так и в .SVG форматах
+
+
+## Программы
+- [Sypex Dumper](https://sypex.net/ru/products/dumper/features/) [са'йпэкс да'мпер] — это программный продукт (PHP-скрипт), с помощью которого можно просто и быстро создать резервную копию (бекап, бэкап, дамп) базы данных MySQL, а также восстановить в случае необходимости базу данных из резервной копии.
