--- a/Список полезных сайтов.md
+++ b/Список полезных сайтов.md
@@ -46,3 +46,6 @@
 
 ## Программы
 - [Sypex Dumper](https://sypex.net/ru/products/dumper/features/) [са'йпэкс да'мпер] — это программный продукт (PHP-скрипт), с помощью которого можно просто и быстро создать резервную копию (бекап, бэкап, дамп) базы данных MySQL, а также восстановить в случае необходимости базу данных из резервной копии.
+
+# Ресурсы не по IT
+- [Математические этюды](https://etudes.ru/)
