--- a/Список полезных сайтов.md
+++ b/Список полезных сайтов.md
@@ -42,6 +42,8 @@
 - [Сайт Flaticon](https://flaticon.com/) - иконки для сайтов
 - [Сайт Slidesgo - слайды](https://slidesgo.com/) - этот ресурс можно использовать, если понадобится сайт с инфографикой. Сами слайды прекрасно обрабатываются в Google Презеентациях.
 - [Сайт Storyset](https://storyset.com/) - здесь хранятся связанные друг с другом иллюстрации для сайтов. Можно подобрать основной цвет иллюстраций, подходящий сюжет и скачать как в .PNG, так и в .SVG форматах
+- [ZorNet.Ru — сайт для вебмастера](http://zornet.ru/) - Интересные решения для вебмастера в создание и продвижение сайтов,
+используя HTML и CSS с оригинальным способом графического дизайна.
 
 
 ## Программы
