Добавил папку struct

--- a/Виды сайтов.md
+++ b/Виды сайтов.md
@@ -8,7 +8,7 @@
 
 В целом, этот тип сайтов уже отжил своё и ныне почти упокоился на задворках истории. Конечно, сайт-визитка — это лучше, чем ничего. Но клиента таким видом сайта уже не зацепить. Более того, в случае сайта визитки нужно ещё и постараться, чтобы вообще клиента не отпугнуть! Так как при создании визитки, как правило, заказчик экономит на всём, на чём можно, то и выглядит в итоге такой сайт соответствующе. Бюджетный — это ещё корректное определение, обычно всё бывает гораздо хуже.
 
-**LANDING PAGE** 
+**Landing page** 
 
 Продающий лендинг пейдж делается для презентации какого-либо конкретного товара, услуги или торговой марки. Поэтому рекламный проект является частью общей маркетинговой программы компании по его продвижению. Промо - сайт имеет подробное описание технических характеристик и преимуществ товара, содержит информацию об акциях, скидках, призах и бонусах за приобретение продукции и т. п.
 
@@ -19,14 +19,6 @@
 Как человека встречают по внешнему виду, так и компанию встречают по её сайту. Как правило, клиент всегда, пускай даже неосознанно, видит/чувствует серьёзность в намерениях (или же её отсутствие). Корпоративный сайт — это отличный способ показать серьёзное отношение к делу.
 
 Более того, создавая корпоративный тип сайта, вы дарите клиенту то, что ему нужно. Клиент чувствует оказываемое ему уважение, когда видит, сколько нужной и полезной информации специально для него создано и размещено. Приятный дизайн, удобное управление, достоверная и регулярно обновляемая информация — вот характерные черты, которые выгодно выделяют корпоративный сайт на фоне визиток.
-
-**Форум**
-
-Форум — место для общения. Форум может быть как отдельным сайтом, так и частью главного. Зачастую форумы создаются под определенные тематики (например, форумы веб-мастеров, форумы любителей охоты и рыбалки).
-
-В бизнесе используется в роли площадки для общения с клиентами.
-
-Создание форума оправдано в случае, когда вы имеете много клиентов, у которых часто возникают вопросы. Если это условие не выполняется, то получается мёртвый форум, который своей пустотой только отпугивает других потенциальных клиентов.
 
 **Интернет-магазин**. 
 
@@ -136,6 +128,14 @@
 **Блоги**
 
 Блог — это веб-сайт или веб-страница, которая регулярно обновляется. Как правило, блог будет вести отдельный человек или небольшая группа. Блог может быть на любую тему, но часто будет писаться в неформальном или разговорном стиле. В последние годы популярность профессиональных блогов значительно возросла.
+
+**Форум**
+
+Форум — место для общения. Форум может быть как отдельным сайтом, так и частью главного. Зачастую форумы создаются под определенные тематики (например, форумы веб-мастеров, форумы любителей охоты и рыбалки).
+
+В бизнесе используется в роли площадки для общения с клиентами.
+
+Создание форума оправдано в случае, когда вы имеете много клиентов, у которых часто возникают вопросы. Если это условие не выполняется, то получается мёртвый форум, который своей пустотой только отпугивает других потенциальных клиентов.
 
 **Корпоративные сайты**
 
