--- a/Список полезных сайтов.md
+++ b/Список полезных сайтов.md
@@ -6,6 +6,7 @@
 
 - [CSS-LIVE - жизнь во фронтенде](https://css-live.ru/)
   - [Элемент \<header\>](https://css-live.ru/articles/element-header.html)
+- [Calltouch -> Словарь маркетолога](https://www.calltouch.ru/glossary/). Сайт системы сквозной аналитики, коллтрекинга и управления рекламой. Словарь включает много терминов, полезных при проектировании коммерческих сайтов.
 
 #### JavaScript
 - [Современный учебник JavaScript](https://learn.javascript.ru/)
