--- a/Структурные элементы страницы.md
+++ b/Структурные элементы страницы.md
@@ -2,44 +2,28 @@
 modified: 2021-01-03T00:23:39+04:00
 ---
 
-# Составные части сайтов
+# Структурные элементы страницы
 
 К классификации содержимого веб-страницы можно подходить по разному, однако так или иначе получается древовидная структура. Это логично, потому что в основе представления страницы  как документа лежит DOM-модель. Именно спускаясь к каждому конечному элементу этой модели через его родителей мы можем управлять им.
+
 ## Структурные элементы страницы
+
 Полезно знать их, чтобы понимать костяк страницы, правила расположения контента и постепенно перейти к семантической вёрстке.
 
-### ***«Шапка»***
+### ***[«Шапка»](struct/header.md)***
 Как правило, располагается вверху веб-страницы, содержит название сайта, главное меню, поисковую форму.
 
-Для "шапки" есть семантический элемент - ```<header>```. Но этим роль не ограничивается из-за того, что в коде может быть несколько элементов ```<header>```. Так что его можно вставлять как заголовки разделов, например, статьи.
-
-Здесь важным моментом является то, что вы не ограничиваетесь использованием только одного элемента ```<header>``` на сайте. Их может быть несколько, и каждый из них будет хедером соответствующей секции документа. Таким образом, получится:
-```html
-<header>
-    <h1>The most important heading on this page</h1>
-    <p>With some supplementary information</p>
-</header>
-<article>
-<header>
-    <h1>Title of this article</h1>
-    <p>By Richard Clark</p>
-</header>
-    <p>...Lorem Ipsum dolor set amet...</p>
-</article>
-```
-Также заметьте, что использование двух ```<h1> ```в рамках этого кусочка кода вполне применимо в HTML 5 (и HTML 4), но может вызвать проблемы с доступностью. Поэтому, мы советуем быть предельно внимательными, если имеется большое количество статей на странице. 
-
-### ***«Подвал»***
+### ***[«Подвал»](struct/footer.md)***
 Обычно располагается в самом низу веб-страницы, в подвале пишут копирайты, ставят иконки соцсетей, форму подписки, дублируют навигацию.
 
-### ***Навигация***
+### ***[Навигация](struct/nav.md)***
 Это главное меню сайта, ссылки для перехода к основным разделам сайта.
 
-### ***Статья***
+### ***[Статья](struct/article.md)***
 Простыня текста с названием, содержимым, датой публикацией, именем автора.
 
-### ***Боковая панель*** 
+### ***[Боковая панель](struct/aside.md)*** 
 На сайтах часто выглядит как вертикальная полоса справа или слева от основного содержимого. Внутри этой полосы располагаются ссылки, рекламные блоки, форма голосования, в общем всё то, без чего можно спокойно обойтись.
 
-### ***Раздел***
+### ***[Раздел](struct/section.md)***
 Раздел — это основная структурная единица при делении сайта на блоки. В основном, раздел содержит заголовок и содержимое, но может обходиться и без заголовка как, к примеру, с рекламным блоком.
